fixed overflow

--- a/assets/css/800less.css
+++ b/assets/css/800less.css
@@ -51,6 +51,7 @@
     .subhead{
         max-height: 160px;
         overflow: scroll;
+        -webkit-overflow-scrolling: touch;
     }
     .d-info-col .title h1{
         font-size: 22px;
